src/index.css
body {
    margin: 0;    
    overflow-y: hidden;
    overflow-x: hidden;
    height: 100vh;
    height: 100%;
}

html {
    font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Roboto", "Segoe UI", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    margin: 0;
    touch-action: manipulation;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-color: "#FF0";
    height: 100vh;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

